[gd_scene load_steps=14 format=3 uid="uid://b4wlwg4ddf3d3"]

[ext_resource type="Script" path="res://world.gd" id="1_5872g"]
[ext_resource type="PackedScene" uid="uid://fgribmap6qdj" path="res://bg.tscn" id="1_v2f85"]
[ext_resource type="PackedScene" uid="uid://cr70e0d0vu1nh" path="res://player.tscn" id="2_1lfp5"]
[ext_resource type="PackedScene" uid="uid://cq4ysdbk6v5le" path="res://ground.tscn" id="2_oqtti"]
[ext_resource type="PackedScene" uid="uid://cdhbkn3k1epyg" path="res://hud.tscn" id="6_e5tgm"]
[ext_resource type="PackedScene" uid="uid://c012kx8gcxv2r" path="res://game_over.tscn" id="6_tpa2o"]
[ext_resource type="AudioStream" uid="uid://ddma2yvpoi6uq" path="res://assets/sfx/OST School of Lock [Nauts]NIKKE GODDESS OF VICTORY.mp3" id="7_h1adu"]
[ext_resource type="AudioStream" uid="uid://8j516uo4pqfm" path="res://assets/sfx/death.wav" id="8_c7w6l"]
[ext_resource type="AudioStream" uid="uid://dpr3j12suxn52" path="res://assets/sfx/lie_death.mp3" id="9_1m7va"]
[ext_resource type="AudioStream" uid="uid://bfa82rgse36fx" path="res://assets/sfx/lie_start1.mp3" id="10_cdtgd"]
[ext_resource type="AudioStream" uid="uid://b1jxt30rk13b8" path="res://assets/sfx/lie_start2.mp3" id="11_o0itc"]
[ext_resource type="AudioStream" uid="uid://cu0fbaypco8x7" path="res://assets/sfx/lie_start3.mp3" id="12_syauk"]
[ext_resource type="AudioStream" uid="uid://bo3661u31paw1" path="res://assets/sfx/lie_start4.mp3" id="13_p5uq2"]

[node name="Main" type="Node"]
script = ExtResource("1_5872g")

[node name="BG" parent="." instance=ExtResource("1_v2f85")]
scale = Vector2(2, 2)
transform = Transform2D(2, 0, 0, 2, 0, 0)

[node name="Player" parent="." instance=ExtResource("2_1lfp5")]
position = Vector2(70, 568)
scale = Vector2(2, 2)

[node name="HUD" parent="." instance=ExtResource("6_e5tgm")]

[node name="GameOver" parent="." instance=ExtResource("6_tpa2o")]
process_mode = 2

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)
limit_top = 0
limit_bottom = -324

[node name="ground" parent="." instance=ExtResource("2_oqtti")]
scale = Vector2(2, 2)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_h1adu")
volume_db = -5.0

[node name="deathsfx" type="AudioStreamPlayer" parent="."]
process_mode = 2
stream = ExtResource("8_c7w6l")
volume_db = 5.0

[node name="liedeath" type="AudioStreamPlayer" parent="."]
process_mode = 2
stream = ExtResource("9_1m7va")
volume_db = -5.0

[node name="lie_start1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_cdtgd")
volume_db = -5.0

[node name="lie_start2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_o0itc")
volume_db = -5.0

[node name="lie_start3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_syauk")
volume_db = -5.0

[node name="lie_start4" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_p5uq2")
volume_db = -5.0
